fix: navpills alignment to center

--- a/css/navbar.css
+++ b/css/navbar.css
@@ -42,6 +42,8 @@ nav li a:hover {
   padding: 0;
   overflow: hidden;
   background-color: var(--color-nav);
+  display: flex;
+  align-items: center;
 }
 
 .nav-logo-li {
@@ -54,8 +56,10 @@ nav li a:hover {
 }
 
 .nav-login-li {
-  float: right;
   padding: 0.2rem;
+  display: flex;
+  flex-grow: 1;
+  justify-content: flex-end;
 }
 
 .nav-login-li a {
